# pyPlayer

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  delframes.py  main.py  play.py  pyplayer.spec  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml  release.yml
pyplayer/: __init__.py  ascii_renderer.py  cli.py  exceptions.py  player.py  renderer_factory.py  video_processor.py  youtube.py
