[project]
name = "pyplayer"
version = "0.1.0"  # probably won't be updated and all versioning will be done through git tags
description = "A terminal-based video player with ASCII art rendering"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pillow",
    "pygame",
    "tqdm",
    "ffmpeg-python",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "ruff",
    "pyright",
    "types-tqdm",
]

[project.scripts]
pyplayer = "pyplayer:main"

[tool.setuptools]
packages = ["pyplayer"]

[tool.pylsp-mypy]
venv_path = ".venv"
venv = "."

[tool.pyright]
typeCheckingMode = "strict"
reportMissingImports = false
reportMissingTypeStubs = false
useLibraryCodeForTypes = true
