[project]
name = "pyplayer"
version = "0.1.0"  # probably won't be updated and all versioning will be done through git tags
description = "A terminal-based video player with ASCII art rendering"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pillow",
    "pygame",
    "tqdm",
    "numpy==2.2.3",
    "typed-ffmpeg",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "ruff",
    "basedpyright",
    "types-tqdm",
    "yt-dlp-types",
    "pytest",
    "pyinstaller",
]

youtube = [
    "yt-dlp",
]

[project.scripts]
pyplayer = "pyplayer:main"

[tool.setuptools]
packages = ["pyplayer"]

[tool.pylsp-mypy]
venv_path = ".venv"
venv = "."

[tool.basedpyright]
typeCheckingMode = "recommended"
reportMissingImports = false
reportMissingTypeStubs = false
useLibraryCodeForTypes = true
reportAny = false
reportExplicitAny = false
reportUnannotatedClassAttribute = false
reportUnusedCallResult = false
